RESOLVED FIXED127081
AX: WebKit is not firing AXMenuItemSelectedNotification
https://bugs.webkit.org/show_bug.cgi?id=127081
Summary AX: WebKit is not firing AXMenuItemSelectedNotification
chris fleizach
Reported 2014-01-15 21:02:22 PST
AX: WebKit is not firing AXMenuItemSelectedNotification AXMenuItemSelectedNotification https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA-UAIG/1.0/tests/test-files/test94.html <rdar://problem/15668929>
Attachments
patch (12.71 KB, patch)
2014-01-15 21:06 PST, chris fleizach
mario: review+
chris fleizach
Comment 1 2014-01-15 21:06:55 PST
EFL EWS Bot
Comment 2 2014-01-15 21:19:44 PST
chris fleizach
Comment 3 2014-01-15 21:28:07 PST
(In reply to comment #2) > (From update of attachment 221328 [details]) > Attachment 221328 [details] did not pass efl-wk2-ews (efl-wk2): > Output: http://webkit-queues.appspot.com/results/5416725646409728 this does not seem to be related, at least looking at the output
Mario Sanchez Prada
Comment 4 2014-01-16 02:27:47 PST
Comment on attachment 221328 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=221328&action=review Lgtm > Source/WebCore/accessibility/AXObjectCache.cpp:742 > + if (nodeHasRole(node, "menuitem") || nodeHasRole(node, "menuitemradio") || nodeHasRole(node, "menuitemcheckbox")) { Nit. I think an early return for this condition would be cleaner. I would also add a null check for node to the OR.
chris fleizach
Comment 5 2014-01-16 08:59:47 PST
Note You need to log in before you can comment on or make changes to this bug.